[project]
name = "airflow-fernet-secrets"
version = "0.0.0"
description = "airflow filesystem secret backend using fernet"
authors = [{ name = "phi", email = "phi.friday@gmail.com" }]
dependencies = [
    "jsonschema",
    "typing-extensions>=4.4.0",
    "sqlalchemy[asyncio]>=1.4",
    "cryptography>=41",
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Apache Airflow",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8, <3.13"

[project.entry-points."apache_airflow_provider"]
provider_info = "airflow_fernet_secrets.info:get_provider_info"

[tool.rye]
managed = true
dev-dependencies = [
    "apache-airflow>=2.8.0",
    "ruff>=0.3.5",
    "ipykernel>=6.29.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_fernet_secrets", "src/airflow"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
