[project]
name = "airflow-fernet-secrets"
version = "0.0.0"
description = "airflow filesystem secret backend using fernet"
authors = [{ name = "phi", email = "phi.friday@gmail.com" }]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Apache Airflow",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8, <3.13"
dependencies = [
    "typing-extensions>=4.4.0",
    "jsonschema",
    "pyyaml",
    "sqlalchemy>=1.4",
    "cryptography>=41",
]

[project.optional-dependencies]
asyncio = [
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=1.4",
]


[tool.rye]
managed = true
dev-dependencies = [
    "apache-airflow[common.sql]>=2.8.0",
    "ruff>=0.3.5",
    "ipykernel>=6.29.4",
    "pytest>=8.1.1",
    "sqlalchemy2-stubs>=0.0.2a38",
]

[project.scripts]
copy_info_schema = "airflow_fernet_secrets.info:copy_provider_info_schema"

[project.entry-points."apache_airflow_provider"]
provider_info = "airflow_fernet_secrets.info:get_provider_info"

[tool.hatch.build.targets.sdist]
exclude = ["src/airflow_fernet_secrets/info.schema.json", "src/**/.gitignore"]
[tool.hatch.build.targets.wheel]
packages = ["src/airflow_fernet_secrets", "src/airflow"]
artifacts = ["src/airflow_fernet_secrets/info.schema.json", "src/**/.gitignore"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ["src", "tests"]
pythonVersion = '3.8'
pythonPlatform = 'Linux'
diagnostic = 'basic'
